Update class comment adn README.md

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,4 @@ spring.jpa.show-sql=true
 #Hibernate 创建数据表的时候，默认的数据库存储引擎选择的是MyISAM。这个参数是在建表的时候，将默认的存储引擎切换为InnoDB用的。
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 #配置指明在程序启动的时候要删除并且创建实体类对应的表。(不要在生产环境中使用)
-spring.jpa.properties.hibernate.hbm2ddl.auto=update
+spring.jpa.properties.hibernate.hbm2ddl.auto=create
